gobilda_ws/gobilda_ws/log/build_2024-11-11_16-22-12/final_project/stdout_stderr.log
running egg_info
writing ../../build/final_project/final_project.egg-info/PKG-INFO
writing dependency_links to ../../build/final_project/final_project.egg-info/dependency_links.txt
writing entry points to ../../build/final_project/final_project.egg-info/entry_points.txt
writing requirements to ../../build/final_project/final_project.egg-info/requires.txt
writing top-level names to ../../build/final_project/final_project.egg-info/top_level.txt
reading manifest file '../../build/final_project/final_project.egg-info/SOURCES.txt'
writing manifest file '../../build/final_project/final_project.egg-info/SOURCES.txt'
running build
running build_py
copying final_project/draw_square.py -> /home/robot/gobilda/gobilda_ws/build/final_project/build/lib/final_project
running install
running install_lib
copying /home/robot/gobilda/gobilda_ws/build/final_project/build/lib/final_project/draw_square.py -> /home/robot/gobilda/gobilda_ws/install/final_project/lib/python3.10/site-packages/final_project
byte-compiling /home/robot/gobilda/gobilda_ws/install/final_project/lib/python3.10/site-packages/final_project/draw_square.py to draw_square.cpython-310.pyc
running install_data
  File "/home/robot/gobilda/gobilda_ws/install/final_project/lib/python3.10/site-packages/final_project/draw_square.py", line 13
    from geometry_msgs.msg TwistStamped
                           ^^^^^^^^^^^^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/robot/gobilda/gobilda_ws/install/final_project/lib/python3.10/site-packages/final_project-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/final_project/final_project.egg-info to /home/robot/gobilda/gobilda_ws/install/final_project/lib/python3.10/site-packages/final_project-0.0.0-py3.10.egg-info
running install_scripts
Installing draw_square script to /home/robot/gobilda/gobilda_ws/install/final_project/lib/final_project
Installing teleop_gobilda script to /home/robot/gobilda/gobilda_ws/install/final_project/lib/final_project
writing list of installed files to '/home/robot/gobilda/gobilda_ws/build/final_project/install.log'
